--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,10 @@
-aiosqlite==0.21.0
-annotated-types==0.7.0
-anyio==4.9.0
-certifi==2025.4.26
-charset-normalizer==3.4.2
-click==8.2.1
-colorama==0.4.6
-databases==0.9.0
-distro==1.9.0
-fastapi==0.115.12
-gpt4all==2.8.2
-greenlet==3.2.2
-h11==0.16.0
-httpcore==1.0.9
-httptools==0.6.4
-httpx==0.28.1
-idna==3.10
-iniconfig==2.1.0
-jiter==0.9.0
-markdown-it-py==3.0.0
-mdurl==0.1.2
-openai==1.78.1
-packaging==25.0
-pluggy==1.5.0
-pydantic==2.11.4
-pydantic_core==2.33.2
-Pygments==2.19.1
-PyMuPDF==1.26.0
-pytest==8.3.5
-python-dotenv==1.1.0
-python-multipart==0.0.20
-PyYAML==6.0.2
-requests==2.32.3
-rich==14.0.0
-sas2py @ file:///C:/Users/sharn/OneDrive/Documents/tria/AI_POC/sas2py_openai_v1
-sniffio==1.3.1
-SQLAlchemy==2.0.41
-starlette==0.46.2
-tqdm==4.67.1
-typing-inspection==0.4.0
-typing_extensions==4.13.2
-urllib3==2.4.0
-uvicorn==0.34.2
-watchfiles==1.0.5
-websockets==15.0.1
+fastapi
+uvicorn[standard]
+sqlalchemy
+databases[sqlite]
+pydantic
+PyMuPDF
+requests
+python-dotenv
+python-multipart
+httpx
